--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 # YAML file from https://dev.to/renegadecoder94/how-to-build-latex-with-travis-ci-and-minted-39ff
+# See also https://github.com/PHPirates/travis-ci-latex-pdf
 language: generic
 # Dependency of the minted package
 before_install:
