--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,14 @@ cache:
 # Change working directory so including files will work
 before_script: cd $TRAVIS_BUILD_DIR
 script:
-  - pdflatex --shell-escape -synctex=1 -interaction=nonstopmode ./master.tex
-  - biber ./master
-  - pdflatex --shell-escape -synctex=1 -interaction=nonstopmode ./master.tex
+  # Texliveonfly will download packages automatically
+  - texliveonfly main.tex
+  # You can use latexmk to automatically handle bibtex and references (recommended)
+  - latexmk -pdf main.tex
+  
+  #- pdflatex --shell-escape -synctex=1 -interaction=nonstopmode ./master.tex
+  #- biber ./master
+  #- pdflatex --shell-escape -synctex=1 -interaction=nonstopmode ./master.tex
 deploy:
   provider: releases
   api_key:
