--- a/.travis.yml
+++ b/.travis.yml
@@ -21,14 +21,10 @@ script:
   # You can use latexmk to automatically handle bibtex and references (recommended)
   #- latexmk -pdf ./master.tex
   
-  - pdflatex master.tex
+  - pdflatex --shell-escape -synctex=1 -interaction=nonstopmode master.tex
   - bibtex master
-  - pdflatex master.tex
-  - pdflatex master.tex # Compile twice to fix references
-
-  #- pdflatex --shell-escape -synctex=1 -interaction=nonstopmode ./master.tex
-  #- biber ./master
-  #- pdflatex --shell-escape -synctex=1 -interaction=nonstopmode ./master.tex
+  - pdflatex--shell-escape -synctex=1 -interaction=nonstopmode  master.tex
+  - pdflatex --shell-escape -synctex=1 -interaction=nonstopmode master.tex # Compile twice to fix references
 
 # Uncomment the following lines to see the packages installed in travis
 after_script:
