--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
   # Run PDFLaTeX combined with biber few times to fix all references. 
   # Expect error until the last command (from Travis to not report error)
   - pdflatex -interaction=nonstopmode master.tex || true
-  - bibtex master || true
+  - biber master || true
   - pdflatex -interaction=nonstopmode  master.tex || true
   - pdflatex -interaction=nonstopmode master.tex # Compile twice to fix references
 
