--- a/.github/workflows/build_latex_and_release.yml
+++ b/.github/workflows/build_latex_and_release.yml
@@ -29,6 +29,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.get_release.outputs.upload_url }}
-          asset_path: ./main.pdf
-          asset_name: main.pdf
+          asset_path: ./master.pdf
+          asset_name: master.pdf
           asset_content_type: pdf
