--- a/.github/workflows/build_latex_and_release.yml
+++ b/.github/workflows/build_latex_and_release.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Compile LaTeX document
         uses: dante-ev/latex-action@master
         with:
-          root_file: main.tex
+          root_file: master.tex
 
       - name: Upload Release Asset
         id: upload-release-asset 
