--- a/.github/workflows/compile_latex.yml
+++ b/.github/workflows/compile_latex.yml
@@ -9,7 +9,8 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v1
+
       - name: Compile LaTeX document
-        uses: dante-ev/latex-action@master
+        uses: dante-ev/latex-action@edge
         with:
           root_file: master.tex
