--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ dist: bionic
 before_install:
   - sudo apt-get install python-pygments
 install:
-  - travis_wait mvn install
   - source ./texlive/texlive_install.sh
 cache:
   directories:
@@ -18,7 +17,7 @@ cache:
 before_script: cd $TRAVIS_BUILD_DIR
 script:
   # Texliveonfly will download packages automatically
-  - texliveonfly ./master.tex --compiler=pdflatex
+  - travis_wait texliveonfly ./master.tex --compiler=pdflatex
   # You can use latexmk to automatically handle bibtex and references (recommended)
   #- latexmk -pdflua -interaction=nonstopmode ./master.tex
   
